package br.inatel.sistema_carrinho_compras.exception;

public class EstoqueInsufisienteException extends Exception {

    public EstoqueInsufisienteException (String message)
    {
        super(message);
    }
}
