package br.inatel.sistema_carrinho_compras.exception;

public class PagamentoException  extends  Exception{

    public PagamentoException(String message)
    {
        super(message);
    }

}
