@startuml
skinparam classAttributeIconSize 0

package "br.inatel.sistema_carrinho_compras" {

    package "user" {
        abstract class Usuario {
            # id : int
            # nome : String
            # email : String
            # logado : boolean
            + Usuario(id: int, nome: String, email: String)
            + login(nome: String, id: int) : void
            + logout() : void
            + getId() : int
            + getNome() : String
            + getEmail() : String
            + isLogado() : boolean
        }

        class Cliente {
            - endereco : String
            - carrinho : Carrinho
            + Cliente(id: int, nome: String, email: String, endereco: String)
            + adicionarCarrinho(item: ItemCarrinho) : void
            + getCarrinho() : Carrinho
            + getEndereco() : String
            + setEndereco(endereco: String) : void
        }

        class Administrador {
            + Administrador(id: int, nome: String, email: String)
            + cadastrarProduto(produto: Produto) : void
            + gerarRelatorio(listaPedidos: List<Pedido>) : void
        }

        Usuario <|-- Cliente
        Usuario <|-- Administrador
    }

    package "model" {
        abstract class Produto {
            # id : int
            # nome : String
            # preco : double
            # quantidadeEmEstoque : int
            + Produto(id: int, nome: String, preco: double, quantidadeEmEstoque: int)
            + getId() : int
            + getNome() : String
            + getPrecoBase() : double
            + getQuantidadeEmEstoque() : int
            + verificarDisponibilidade(quantidadeDesejada: int) : void
            + diminuirEstoque(quantidade: int) : void
            + {abstract} getPreco() : double
        }

        class ProdutoFisico {
            - peso : double
            + ProdutoFisico(id: int, nome: String, preco: double, quantidadeEmEstoque: int, peso: double)
            + getPeso() : double
            + getPreco() : double
        }

        class ProdutoDigital {
            - linkDownload : String
            + ProdutoDigital(id: int, nome: String, preco: double, quantidadeEmEstoque: int, linkDownload: String)
            + getLinkDownload() : String
            + getPreco() : double
        }

        class ItemCarrinho {
            - produto : Produto
            - quantidade : int
            + ItemCarrinho(produto: Produto, quantidade: int)
            + getProduto() : Produto
            + getQuantidade() : int
            + subtotal() : double
        }

        class Carrinho {
            - itens : List<ItemCarrinho>
            + Carrinho()
            + adicionarItem(item: ItemCarrinho) : void
            + removerItem(item: ItemCarrinho) : void
            + calcularTotal() : double
            + getItens() : List<ItemCarrinho>
        }

        class Pedido {
            - id : int
            - valorTotal : double
            + Pedido(id: int, valorTotal: double)
            + finalizar(carrinho: Carrinho, formaPagamento: IPagamento) : void
            + getId() : int
            + getValorTotal() : double
        }

        Produto <|-- ProdutoFisico
        Produto <|-- ProdutoDigital
        Carrinho "1" *-- "*" ItemCarrinho : agrega >
        ItemCarrinho "1" --> "1" Produto : contém >
    }

    package "payment" {
        interface IPagamento {
            + processarPagamento(valor: double) : boolean
        }

        class PagamentoPix {
            - chavePix : String
            + PagamentoPix(chavePix: String)
            + processarPagamento(valor: double) : boolean
        }

        class PagamentoCartao {
            - numeroCartao : String
            + PagamentoCartao(numeroCartao: String)
            + processarPagamento(valor: double) : boolean
        }

        class PagamentoBoleto {
            - codigoBarras : String
            + PagamentoBoleto(codigoBarras: String)
            + processarPagamento(valor: double) : boolean
        }

        IPagamento <|.. PagamentoPix
        IPagamento <|.. PagamentoCartao
        IPagamento <|.. PagamentoBoleto
    }

    package "repository" {
        interface IRepository<T> {
            + salvar(obj: T) : void
            + buscar(id: int) : T
            + remover(id: int) : void
        }

        class ProdutoArquivoRepository {
            - produtos : List<Produto>
            + salvar(produto: Produto) : void
            + buscar(id: int) : Produto
            + remover(id: int) : void
            + listarTodos() : List<Produto>
        }

        class PedidoArquivoRepository {
            - pedidos : List<Pedido>
            + salvar(pedido: Pedido) : void
            + buscar(id: int) : Pedido
            + remover(id: int) : void
            + listarTodos() : List<Pedido>
        }

        IRepository <|.. ProdutoArquivoRepository
        IRepository <|.. PedidoArquivoRepository
    }

    package "exception" {
        class EstoqueInsufisienteException {
            + EstoqueInsufisienteException(message: String)
        }

        class PagamentoException {
            + PagamentoException(message: String)
        }
    }


    Cliente "1" *-- "1" Carrinho : possui >
    Pedido ..> IPagamento : utiliza >
    Administrador ..> Produto : manipula >
    Carrinho ..> EstoqueInsufisienteException : lança >
    IPagamento ..> PagamentoException : lança >
}
@endum